aks-kaito/ingress-ragengine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ragengine-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rag-nostorage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                # RAGEngine Service name is created from the RAGEngine CR name.
                # If you deploy pvc-ragengine-vector-db.yaml, switch this to: ragengine-with-storage
                name: ragengine-example
                port:
                  number: 80
          - path: /rag(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ragengine-with-storage
                port:
                  number: 80
